--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,9 @@
     "features": {
         "ghcr.io/devcontainers/features/terraform:1": {
             "version": "1.11.4"
+        },
+        "ghcr.io/devcontainers/features/aws-cli": {
+            "version": "latest"
         }
     },
     "mounts": [
