--- a/.github/workflows/identity-centre-terraform.yml
+++ b/.github/workflows/identity-centre-terraform.yml
@@ -28,28 +28,28 @@ jobs:
 
       - uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.7.5
+          terraform_version: 1.11.4
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::ACCOUNT_ID:role/GitHubActionsIdentityCenterTerraform
+          role-to-assume: arn:aws:iam::315164662538:role/GitHubActionsIdentityCenterTerraform
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Terraform init
-        run: terraform init -input=false
+        run: terraform -chdir=terraform init -input=false
 
       - name: Terraform fmt
-        run: terraform fmt -check -recursive
+        run: terraform -chdir=terraform fmt -check -recursive
 
       - name: Terraform validate
-        run: terraform validate
+        run: terraform -chdir=terraform validate
 
       - name: Terraform plan
         id: plan
         run: |
-          terraform plan -input=false -no-color -out=tfplan
-          terraform show -no-color tfplan > plan.txt
+          terraform -chdir=terraform plan -input=false -no-color -out=tfplan
+          terraform -chdir=terraform show -no-color tfplan > plan.txt
 
       - name: Comment plan on PR
         uses: actions/github-script@v7
@@ -80,16 +80,16 @@ jobs:
 
       - uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.7.5
+          terraform_version: 1.11.4
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::ACCOUNT_ID:role/GitHubActionsIdentityCenterTerraform
+          role-to-assume: arn:aws:iam::315164662538:role/GitHubActionsIdentityCenterTerraform
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Terraform init
-        run: terraform init -input=false
+        run: terraform -chdir=terraform init -input=false
 
       - name: Terraform apply
-        run: terraform apply -input=false -auto-approve
+        run: terraform -chdir=terraform apply -input=false -auto-approve
