--- a/.github/workflows/identity-centre-terraform.yml
+++ b/.github/workflows/identity-centre-terraform.yml
@@ -29,17 +29,6 @@ jobs:
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.11.4
-      
-      - name: Dump OIDC token claims (debug)
-        shell: bash
-        env:
-          ACTIONS_ID_TOKEN_REQUEST_URL: ${{ env.ACTIONS_ID_TOKEN_REQUEST_URL }}
-          ACTIONS_ID_TOKEN_REQUEST_TOKEN: ${{ env.ACTIONS_ID_TOKEN_REQUEST_TOKEN }}
-        run: |
-          set -euo pipefail
-          TOKEN=$(curl -sS -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
-            "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=sts.amazonaws.com" | jq -r '.value')
-          echo "$TOKEN" | awk -F. '{print $2}' | base64 -d 2>/dev/null | jq
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
@@ -59,7 +48,7 @@ jobs:
       - name: Terraform plan
         id: plan
         run: |
-          terraform -chdir=terraform plan -input=false -no-color -out=tfplan
+          terraform -chdir=terraform plan -input=false -no-color -out=tfplan -var-file access.tfvars
           terraform -chdir=terraform show -no-color tfplan > plan.txt
 
       - name: Comment plan on PR
@@ -92,17 +81,6 @@ jobs:
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.11.4
-
-      - name: Dump OIDC token claims (debug)
-        shell: bash
-        env:
-          ACTIONS_ID_TOKEN_REQUEST_URL: ${{ env.ACTIONS_ID_TOKEN_REQUEST_URL }}
-          ACTIONS_ID_TOKEN_REQUEST_TOKEN: ${{ env.ACTIONS_ID_TOKEN_REQUEST_TOKEN }}
-        run: |
-          set -euo pipefail
-          TOKEN=$(curl -sS -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
-            "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=sts.amazonaws.com" | jq -r '.value')
-          echo "$TOKEN" | awk -F. '{print $2}' | base64 -d 2>/dev/null | jq
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
