pass -var-file to terraform apply

--- a/.github/workflows/identity-centre-terraform.yml
+++ b/.github/workflows/identity-centre-terraform.yml
@@ -92,4 +92,4 @@ jobs:
         run: terraform -chdir=terraform init -input=false
 
       - name: Terraform apply
-        run: terraform -chdir=terraform apply -input=false -auto-approve
+        run: terraform -chdir=terraform apply -input=false -auto-approve -var-file access.tfvars
